--- a/src/app/drafts/matchup-overview/matchup/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup/matchup.scss
@@ -1,17 +1,4 @@
-.content-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  min-width: fit-content;
-  height: 100%;
-  min-height: fit-content;
-  align-items: center;
-  > :not([hidden]) ~ :not([hidden]) {
-    margin-top: 1rem;
-  }
-}
-
-.table-wrapper {
+.widget-wrapper {
   padding: 0.75rem;
   min-width: fit-content;
   width: fit-content;
@@ -19,17 +6,17 @@
   border-radius: 1rem;
   background-color: var(--mat-sys-surface);
   box-shadow: var(--mat-sys-level3);
-}
 
-.title-container {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 0 1rem 0.5rem;
-  color: var(--mat-sys-primary);
-  font-weight: 700;
-  .table-label {
-    font-size: 1.2em;
-    font-family: "Nasalization RG", sans-serif;
+  .widget-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 1rem 0.5rem;
+    color: var(--mat-sys-primary);
+    font-weight: 700;
+    .widget-label {
+      font-size: 1.2em;
+      font-family: "Nasalization RG", sans-serif;
+    }
   }
 }
