--- a/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
@@ -1,59 +1,13 @@
-<div class="flex flex-col w-full h-full">
-  <div class="flex w-full px-1 bg-menu-400 rounded-t-xl">
-    <div class="flex w-full px-1 py-0.5 border-b border-menu-300 items-center">
-      <button
-        (click)="toggleCollapse()"
-        class="w-5 h-5 m-2 rounded cursor-pointer bg-menu-300 hover:bg-menu-200 shadow-md"
-      >
-        @if (toggleAll) {
-          <minus-svg class="h-full" title="Hide"></minus-svg>
-        } @else {
-          <plus-svg
-            class="h-full stroke-symbolColor-main"
-            title="Expand"
-          ></plus-svg>
-        }
-      </button>
-      <h1 class="flex-grow text-xl font-bold text-center">Learned Moves</h1>
-      <button
-        (click)="swapTeams()"
-        class="px-3 ml-auto text-sm rounded-md shadow-md"
-        [ngClass]="clickColor(true)"
-      >
-        ⇄
-      </button>
+<div class="widget-wrapper" [ngClass]="{ alternate: opponent }">
+  <div class="widget-container">
+    <div class="widget-label">Learned Moves</div>
+    <div class="flex">
+      <div>
+        <mat-slide-toggle [(ngModel)]="opponent"></mat-slide-toggle>
+      </div>
     </div>
   </div>
-  <div
-    class="w-full overflow-y-auto flex-grow border-4 border-menu-400 max-h-128 bg-menu-400"
-  >
-    @for (category of teams[selectedTeam]; track $index) {
-      <move-category
-        [category]="category"
-        [show]="category.show ?? true"
-        (showUpdate)="category.show = $event"
-      >
-      </move-category>
-    }
+  <div class="movechart-wrapper">
+    <moves-core [movechart]="opponent ? teams[1] : teams[0]"></moves-core>
   </div>
-  <div class="w-full h-3 rounded-b-full bg-menu-400"></div>
 </div>
-
-<div class="border-bug" style="display: none"></div>
-<div class="border-dark" style="display: none"></div>
-<div class="border-dragon" style="display: none"></div>
-<div class="border-electric" style="display: none"></div>
-<div class="border-fairy" style="display: none"></div>
-<div class="border-fighting" style="display: none"></div>
-<div class="border-fire" style="display: none"></div>
-<div class="border-flying" style="display: none"></div>
-<div class="border-ghost" style="display: none"></div>
-<div class="border-grass" style="display: none"></div>
-<div class="border-ground" style="display: none"></div>
-<div class="border-ice" style="display: none"></div>
-<div class="border-normal" style="display: none"></div>
-<div class="border-poison" style="display: none"></div>
-<div class="border-psychic" style="display: none"></div>
-<div class="border-rock" style="display: none"></div>
-<div class="border-steel" style="display: none"></div>
-<div class="border-water" style="display: none"></div>
