--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -631,7 +631,7 @@
         <div class="tertiary-fixed-dim color-sample">Tertiary Fixed Dim</div>
       </div>
       <div class="flex space-x-1">
-        <div class="surface-low color-sample">Surface Low</div>
+        <div class="surface-dim color-sample">Surface Dim</div>
         <div class="surface color-sample">Surface</div>
         <div class="surface-bright color-sample">Surface Bright</div>
         <div class="surface-variant color-sample">Surface Variant</div>
