--- a/src/app/drafts/matchup-overview/matchup/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup/matchup.scss
@@ -10,6 +10,7 @@
   .widget-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding: 0 1rem 0.5rem;
     color: var(--mat-sys-primary);
@@ -17,6 +18,12 @@
     .widget-label {
       font-size: 1.2em;
       font-family: "Nasalization RG", sans-serif;
+    }
+
+    .widget-options {
+      display: flex;
+      align-items: center;
+      column-gap: 0.5rem;
     }
   }
 }
