--- a/src/app/drafts/matchup-overview/matchup/summary/summary.component.html
+++ b/src/app/drafts/matchup-overview/matchup/summary/summary.component.html
@@ -1,11 +1,7 @@
 <div class="widget-wrapper" [ngClass]="{ alternate: opponent }">
   <div class="widget-container">
     <div class="widget-label">Draft Summary</div>
-    <div class="flex">
-      <div>
-        <mat-slide-toggle [(ngModel)]="opponent"></mat-slide-toggle>
-      </div>
-    </div>
+    <swap-opponent [(ngModel)]="opponent"></swap-opponent>
   </div>
   <summary-core
     [summary]="opponent ? summaries[1] : summaries[0]"
