--- a/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.html
@@ -1,14 +1,11 @@
 <div class="widget-wrapper" [ngClass]="{ alternate: opponent }">
   <div class="widget-container">
     <div class="widget-label">Defensive Type Chart</div>
-    <div class="flex">
-      <div>
-        <mat-slide-toggle [(ngModel)]="abilities"></mat-slide-toggle>
-        Abilities
-      </div>
-      <div>
-        <mat-slide-toggle [(ngModel)]="opponent"></mat-slide-toggle>
-      </div>
+    <div class="widget-options">
+      <mat-slide-toggle [(ngModel)]="abilities" labelPosition="before"
+        >Abilities</mat-slide-toggle
+      >
+      <swap-opponent [(ngModel)]="opponent"></swap-opponent>
     </div>
   </div>
   <typechart-core
